feat: quick search
